Correct jquery pathing for pretty and non pretty urls, spacing on user icons

--- a/assets/chat.css
+++ b/assets/chat.css
@@ -118,9 +118,9 @@
     background:url('http://www.gravatar.com/avatar/ad516503a11cd5ca435acc9bb6523536?size=30') no-repeat 1px 1px #444444;
     border:1px solid #111111;
     float:left;
-    height:16px;
+    height:23px;
     margin:2px 0 0 2px;
-    width:16px;
+    width:23px;
 }
 
 #chatUsers .user img{
